--- a/lib/templates/docpad/src/layouts/default.html.jade
+++ b/lib/templates/docpad/src/layouts/default.html.jade
@@ -11,10 +11,10 @@ head
 	meta(charset="utf-8")
 	meta(http-equiv="X-UA-Compatible", content="IE=edge")
 	title
-		|Coffee and Code
-	meta(name="description", content="")
-	meta(name="viewport", content="width=device-width, initial-scale=1")
-	//Place favicon.ico and apple-touch-icon.png in the root directory
+		!= site.title
+	meta(name="description", content=site.description)
+	meta(name="viewport", content="width=device-width")
+
 	!= getBlock('meta').add(site.meta).toHTML()
 	!= getBlock('styles').add(site.styles).toHTML()
 	script(src="js/vendor/modernizr-2.6.2.min.js")
