--- a/lib/templates/general/assets/sass/_config.scss
+++ b/lib/templates/general/assets/sass/_config.scss
@@ -169,7 +169,7 @@ $gray-lighter:          #eeeeee                 !default;
 $blue:                  #0064cd                 !default;
 $green:                 #3ca838                 !default;
 $red:                   #e72727                 !default;
-$yellow:                #ff9a1f                 !default;
+$yellow:                #ffcc00                 !default;
 $orange:                #e64919                 !default;
 $pink:                  #c3325f                 !default;
 $purple:                #834186                 !default;
