--- a/lib/templates/wordpress/assets/sass/_config.scss
+++ b/lib/templates/wordpress/assets/sass/_config.scss
@@ -74,7 +74,7 @@ $mobile:   767px;
 ////////////////////////////////////////////////////////////////////
 
 // General
-$use-global:            true    !default; // Global - It's highly recommended to use it!
+$use-global:            true    !default; // Global
 $use-animations:        true    !default; // Animations on links
 $use-types:             true    !default; // Types and Headings
 $use-links:             true    !default; // Links
