--- a/lib/templates/wordpress/assets/sass/modules/_functions.scss
+++ b/lib/templates/wordpress/assets/sass/modules/_functions.scss
@@ -3,13 +3,12 @@
 // --------------------------------------------------
 
 // Generic function to calculate a percentage based on pixel values
-// (independent of any specific grid system)
-
-@function calc-pc($target, $container: $base-font-size) {
+@function pc($target, $container: $base-font-size) {
   @return $target / $container * 100%;
 }
 
-@function calc-em($target, $container: $base-font-size) {
+// Generic function to calculate a relative unit based on pixel values
+@function em($target, $container: $base-font-size) {
   @return $target / $container * 1em;
 }
 
