--- a/lib/templates/wordpress/assets/sass/modules/_mixins.scss
+++ b/lib/templates/wordpress/assets/sass/modules/_mixins.scss
@@ -2,6 +2,32 @@
 // BASE MIXINS
 // --------------------------------------------------
 
+// Links
+// ------------------
+@mixin link-colors($normal, $hover: false, $active: false, $visited: false, $focus: false) {
+    color: $normal;
+    @if $visited {
+        &:visited {
+            color: $visited;
+        }
+    }
+    @if $focus {
+        &:focus {
+            color: $focus;
+        }
+    }
+    @if $hover {
+        &:hover {
+            color: $hover;
+        }
+    }
+    @if $active {
+        &:active {
+            color: $active;
+        }
+    }
+}
+
 // Forms
 // ------------------
 
