--- a/lib/templates/wordpress/style.css
+++ b/lib/templates/wordpress/style.css
@@ -8,5 +8,5 @@ Version: 0.1.0
 Tags:
 
 Don't add CSS in this file!
-The theme CSS is in 'assets/css/' folder
+The theme CSS is in 'assets/sass/' folder
 */
