Add new templates

--- a/lib/templates/node/views/layout.jade
+++ b/lib/templates/node/views/layout.jade
@@ -22,11 +22,10 @@ html.no-js(lang='en')
         block content
 
         footer
-        script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-        script(src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js')
-        script(src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js')
-        //- script
-          window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\\/script>')
+        //- script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
+        //- script(src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js')
+        //- script(src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js')
+        //- script(src='js/vendor/jquery-1.10.2.min.js')
         //- script(defer, src='/vendor/backbone-1.1.0.min.js')
         //- script(defer, src='/vendor/underscore-1.5.2.min.js')
         //- script(defer, src='js/plugins.js')
