--- a/lib/templates/meanstack/public/views/index.jade
+++ b/lib/templates/meanstack/public/views/index.jade
@@ -1,13 +1,3 @@
-doctype 5
-html
-    head
-        include partials/header
+extends layout
 
-    body
-        header#header
-            h1 Project Name
-
-        include partials/templates
-
-    footer
-        include partials/footer
+    block body
