--- a/lib/templates/meanstack/public/views/layout.jade
+++ b/lib/templates/meanstack/public/views/layout.jade
@@ -2,6 +2,7 @@
 html(ng-app="")
     head
         //- Tech Meta
+        base(href='/')
         meta( charset="utf-8" )
         meta( http-equiv="X-UA-Compatible", content="IE=edge,chrome=1" )
         meta( name="viewport", content="width=device-width" )
@@ -24,15 +25,7 @@ html(ng-app="")
         link( rel="apple-touch-icon", href="images/icons/apple-touch-icon.png")
 
         //- CSS
-        link( rel="stylesheet", href="styles/style.css" )
+        link( rel="stylesheet", href="styles/app.css" )
 
     body
         block body
-
-script
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-
-script( src='scripts/requires/angular/angular.js' )
